--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
+  "devDependencies": {
+    "sqlite3": "~2.2.0"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
@@ -15,6 +22,6 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "sequelize": "~1.7.0",
-    "sqlite3": "~2.2.0"
+    "pg": "~4.1.1"
   }
 }
