--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "sequelize": "~1.7.0",
-    "pg": "~4.1.1"
+    "pg": "~4.1.1",
+    "pg-hstore": "~2.3.2"
   }
 }
