--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "sqlite3": "~2.2.0"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
-    "express-partials": "^0.3.0",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "sequelize": "~1.7.0",
+    "express": "~4.9.0",
+    "express-partials": "^0.3.0",
+    "morgan": "~1.3.0",
     "pg": "~4.1.1",
-    "pg-hstore": "~2.3.2"
+    "pg-hstore": "~2.3.2",
+    "sequelize": "^2.0.0",
+    "serve-favicon": "~2.1.3",
+    "method-override": "^2.3.1"
   }
 }
